Thu May 30 13:54:20 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/exam/c_builtin/cc1_code.rb : Fix function call extraction
	  in order to output function calls within the global scope.

	* lib/adlint/exam/c_builtin/ld_metric.rb : Improve performance of
	  FN_CALL metric measurement.

	* lib/adlint/ld/object.rb : Fix bad function call graph calculation.

	* lib/adlint/exam/c_builtin.rb : Fix bad abbreviations of class names.
	* lib/adlint/code.rb : Ditto.
	* lib/adlint/report.rb : Ditto.

Wed May 29 18:48:01 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* release.rc : 3.0.5
	  - Fix bad handling of block comments in order not to assume comment
	    terminator as a part of comment content.
	  - Fix abend problem of preprocessor when a block comment is not
	    terminated in the translation-unit.
	  - Fix block comment handling in order not to dive into nested part
	    when a single slash character appears before the comment
	    terminator.
	  - Fix infinite-loop problem of preprocessor when the #include
	    directive appears with undefined macro.
	  - Fix bad expression-constancy check in order to treat an expression
	    derives an address-constant as a constant-expression.
	  - Fix bad variable defining behavor in order to correctly evaluate
	    sizeof-expression that refers defining variable in the initializer.
	  - Fix W0642 code check in order to warn only when the original object
	    of implicit conversion is an array.
	  - Revise specification of W0642 code check in order to warn about all
	    the illegal address derivation from the object declared as
	    `register'.
	  - Fix bad value domain management of the variable whose storage
	    duration is static.
	  - Fix abend problem in parsing unnamed bit-field declaration.
	  - Fix W0786 code check in order not to warn when a typedefed type
	    which is same as signed or unsigned int is specified as a base of
	    the bit-field.